# bevy_netcode

./: Cargo.toml  README.md
client/: Cargo.toml
client/src/: lib.rs  main.rs  message.rs  peer.rs
matchmaker/: .env  Cargo.toml  README.md
matchmaker/migrations/2022-08-17-184354_create_users/: up.sql
matchmaker/src/: application.rs  authentication.rs  configuration.rs  db.rs  lib.rs  main.rs
matchmaker/src/application/: client.rs  moderator.rs  services.rs  state.rs
matchmaker/src/application/services/: user.rs
matchmaker/src/authentication/: error.rs
matchmaker/src/db/: actions.rs  models.rs  schema.rs
matchmaker/src/middleware/: authentication.rs
matchmaker/tests/api/: authentication.rs  basic.rs  blocking.rs  helper.rs  main.rs  test_db.rs  user.rs  ws.rs
webrtc_socket/: Cargo.toml
webrtc_socket/src/: blocking.rs  ggrs_socket.rs  lib.rs  message.rs  peer.rs
webrtc_socket/src/peer/: rtc_config.rs
